--- a/services/sample-service-2/Dockerfile
+++ b/services/sample-service-2/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /app
 COPY pyproject.toml poetry.lock /app/
 COPY . /app/
 
-RUN pip install --no-cache-dir poetry && poetry install --no-dev --no-root
+RUN pip install --no-cache-dir poetry && poetry install --no-root
 
-RUN chmod +x scripts/entrypoint.sh
+RUN chmod +x scripts/entrypoint.sh scripts/wait-for-it.sh 
 
 ENTRYPOINT ["scripts/entrypoint.sh"]
