--- a/services/poetry_service/pyproject.toml
+++ b/services/poetry_service/pyproject.toml
@@ -1,14 +1,17 @@
 [tool.poetry]
-name = "poetry_service"
+name = "poetry-service"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["sunny kumar sinha <thesunnysinha@gmail.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-fastapi = "^0.70.0"
-uvicorn = "^0.15.0"
+python = "^3.11"
+gunicorn = "^23.0.0"
+uvicorn = "^0.30.5"
+fastapi = "^0.112.0"
+
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
